Fixing card spacing in carousel on mobile

--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -224,6 +224,16 @@
         }
     }
 
+    &--carousel {
+        #{$root}__description {
+            margin-bottom: $gutter;
+
+            @include media-query(large) {
+                margin-bottom: 0;
+            }
+        }
+    }
+
     &__container {
         display: flex;
         flex-direction: column;
